--- a/blockchain.html
+++ b/blockchain.html
@@ -130,17 +130,25 @@
 		<div class="row">
 			<div class="card col-sm-6">
 		 		<!-- <a data-toggle="modal" data-target="#modal1"><img src="img/beneficios/AGT_7163.png" class="card-img-top imgContainer"></a> -->
-				<div class="card-body">
+				<div class="card-body bg-dark text-white">
 					<div class="card-text">
 						<h4><strong>¿Qué es?</strong></h4>
 				    	<p>
 				    		<!-- <br><br> -->
 				    		<strong>Blockchain</strong> es una base de datos en la que se describen transacciones que realizan los usuarios. Con esta tecnología se pretende facilitar el intercambio de información con valor entre las personas, sin intermediarios, pero  con la confianza de que aquello que se comparte ha sido verificado. Esto aumenta la confianza de lo que se comparte. Por ejemplo, cuando uno realiza una transacción para comprar una casa, existe un tercero que valida los fondos en el proceso de venta y compra, el cual podría ser el banco. 
-				    		<br><br>
+				    	</p>
+				    </div>
+				</div>
+
+				<div class="card-body ">
+					<div class="card-text">
+						<br>
+				    	<p>
 				    		En la educación, esta tecnología puede ser útil para eficientar procesos, por ejemplo la emisión de credenciales digitales, como lo son los títulos profesionales, integrando la tecnología de Blockchain para ofrecer la máxima seguridad de la información: evitando que otra persona pueda plagiar o modificar los datos del estudiante.
 				    	</p>
 				    </div>
 				</div>
+				<br>
 			</div>
 
 			<div class="col-sm-6" style="text-align: center;">
@@ -151,31 +159,9 @@
 
 	<br>
 
-	<!-- <div class="container-fluid"> -->
-
-		<!-- <div class="row" style="background-color: #F5F5F5;"> 
-			<div class="card-body">
-				<p class="card-text">
-					<strong>¿Para qué sirve o su objetivo?</strong>
-					<br>
-					El objetivo de la tecnología blockchain en los procesos educativos, como lo es la emisión de títulos, está dirigido a modernizar el proceso de verificación por parte de universidades y empleadores, eliminando la necesidad de recurrir a la fuente original de emisión para verificar la autenticidad de los mismos. 
-				</p>
-			</div>
-		</div> -->
-
 		<div class="row" style="background-color: #F5F5F5;"> 
 
 			<div class="col-sm-6">
-				<!-- <div class="row"> -->
-					<div class="card-body">
-						<p class="card-text">
-							<strong>¿Para qué sirve o su objetivo?</strong>
-							<br>
-							El objetivo de la tecnología blockchain en los procesos educativos, como lo es la emisión de títulos, está dirigido a modernizar el proceso de verificación por parte de universidades y empleadores, eliminando la necesidad de recurrir a la fuente original de emisión para verificar la autenticidad de los mismos. 
-						</p>
-					</div>
-				<!-- </div> -->
-
 				<div style="text-align: center;">
 					<iframe width="90%" height="360" src="https://www.youtube.com/embed/K5mrROvJhVI?autoplay=1" frameborder="0" ></iframe>
 				</div>
@@ -183,51 +169,62 @@
 
 			<div class="col-sm-6">
 				<div class="card-body">
-					<!-- <p class="card-text">
+					<p class="card-text">
 						<strong>¿Para qué sirve o su objetivo?</strong>
 						<br>
 						El objetivo de la tecnología blockchain en los procesos educativos, como lo es la emisión de títulos, está dirigido a modernizar el proceso de verificación por parte de universidades y empleadores, eliminando la necesidad de recurrir a la fuente original de emisión para verificar la autenticidad de los mismos. 
 					</p>
-					<br> -->
+					<br>
 					<p class="card-text">
 						<strong>¿En qué áreas o proyectos está aplicado en el Tec actualmente?</strong>
 						<br>
 						El Tecnológico de Monterrey es una de las universidades pioneras en la implementación de la tecnología blockchain para expedir credenciales académicas. En este impulso el Tec ha logrado que el 90% de sus egresados soliciten la emisión de su título en formato electrónico con esta tecnología para garantizar: seguridad y poder llevar sus títulos desde su teléfono móvil.
-						<br><br>
-						El uso de blockchain en la emisión de títulos profesionales es un gran paso que abrirá las puertas para otros usos, pues la institución, junto con otras nueve universidades forma parte del grupo que trabaja en el diseño de una infraestructura global para credenciales académicas en un formato digital. De esta manera, se busca que:
-						<ul>
-							<li>
-								Empleadores y otras instituciones puedan verificar en tiempo real la autenticidad del título.
-							</li>
-							<li>
-								La persona puedan compartir su título electrónico con quien decida o en sus redes sociales.
-							</li>
-							<li>
-								Se pueda asegurar que los registros no son modificados después de emitirse.
-							</li>
-							<li>
-								El título sea interoperable. Los registros no pueden ser modificados después de haberse generado, por lo que se disminuyen posibles fraudes.
-							</li>
-						</ul>
-						Además de implementarse esta tecnología en la emisión de títulos a nivel profesional y posgrado, también el área de Talento y Cultura la adopta para la generación de credenciales digitales con el fin de acreditar las competencias de los líderes transformadores del Tec.
 					</p>
-					<!-- <button type="button" class="btn btn-secondary" style="float: right;">Ver más</button> -->
+					<a class="btn btn-secondary" role="button" data-toggle="modal" data-target="#modalmas" style="float: right; color: white;">Ver más</a>
 					<br><br>
 				</div>
 			</div>
 		</div>
 
 		<br>
-
-		<!-- <div>
-			<p>
-			Ingresa al sitio de <a href="https://mostla.tec.mx">Mostla</a> para conocer más de este espacio, sus servicios y proyectos.
-			<br><br>
-			El siguiente video recoge algunas experiencias de estudiantes y profesores que han trabajado en Mostla. &nbsp;
-			<button type="button" class="btn btn-secondary">Ver video</button>
-			</p>
-		</div> -->
 		
+	</div>
+
+	<div id="modalmas" class="modal fade border-0" role="dialog">
+	  	<div class="modal-dialog "><!-- modal-lg-->
+		    <!-- Modal content-->
+		    <div class="modal-content">
+		    	<div class="modal-header">
+		      		<h4 style="color: #000000"><strong>Blockchain en el Tec</strong></h4>
+		        	<button type="button" class="close" data-dismiss="modal">&times;</button>
+		      	</div>
+		      	<div class="modal-body ">
+		      		<div class="row">
+		      			<div class="col-sm-12">
+			      			<p>
+			      				El uso de blockchain en la emisión de títulos profesionales es un gran paso que abrirá las puertas para otros usos, pues la institución, junto con otras nueve universidades forma parte del grupo que trabaja en el diseño de una infraestructura global para credenciales académicas en un formato digital. De esta manera, se busca que:
+								<ul>
+									<li>
+										Empleadores y otras instituciones puedan verificar en tiempo real la autenticidad del título.
+									</li>
+									<li>
+										La persona puedan compartir su título electrónico con quien decida o en sus redes sociales.
+									</li>
+									<li>
+										Se pueda asegurar que los registros no son modificados después de emitirse.
+									</li>
+									<li>
+										El título sea interoperable. Los registros no pueden ser modificados después de haberse generado, por lo que se disminuyen posibles fraudes.
+									</li>
+								</ul>
+								Además de implementarse esta tecnología en la emisión de títulos a nivel profesional y posgrado, también el área de Talento y Cultura la adopta para la generación de credenciales digitales con el fin de acreditar las competencias de los líderes transformadores del Tec.
+
+			      			</p>
+			      		</div>
+		      		</div>
+			    </div>
+		  	</div>
+		</div>
 	</div>
 
 	<!-- <br> -->
