quité redes en footer y navbar igual para todas las páginas

--- a/mostla.html
+++ b/mostla.html
@@ -88,28 +88,107 @@
 					<li class="nav-item align-self-left" style="padding: 0 20px; ">
 						<a href="index.html"><img src="img/TS.png" class="logoOCJ"></a>
 					</li>
-					<li class="nav-item align-self-center dropdown" style="padding: 0 20px;">
-					  	<a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tecnología en el Tec</a>
+					<li class="nav-item dropdown align-self-center" style="padding: 0 20px;"> <!--align-self-center -->
+					  	<a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="tecnologias">Tecnología en el Tec</a>
 						<!-- <a class="nav-link text-white" href="conoce.html">CONOCE EL PROGRAMA</a> -->
-						<div class="dropdown-menu dropdown">
-							<a class="dropdown-item" href="">Mejores Herramientas</a>
-							<a class="dropdown-item" href="mostla.html">MOSTLA</a>
-							<a class="dropdown-item" href="redlab.html">REDLab</a>
-							<a class="dropdown-item" href="">Ciberseguridad</a>
-							<a class="dropdown-item" href="">Adobe</a>
-							<a class="dropdown-item" href="">Microsoft</a>
-							<a class="dropdown-item dropdown-submenu dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Transformación Digital</a>
+						<ul class="dropdown-menu dropright" aria-labelledby="tecnologias">
+							<li><a class="dropdown-item" href="">Mejores Herramientas</a></li>
+							<!-- <li><a class="dropdown-item" href="mostla.html">MOSTLA</a></li> -->
 
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="">Teams</a>
-								<a class="dropdown-item" href="">Outlook</a>
-								<a class="dropdown-item" href="">Excel</a>
-								<a class="dropdown-item" href="">Word</a>
-								<a class="dropdown-item" href="">Power Point</a>
-								<a class="dropdown-item" href="">OneDrive</a>
-								<a class="dropdown-item" href="">OneNote</a>
-							</div>
-						</div>
+							<li class="dropdown-submenu">
+								<a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="mostla">MOSTLA</a>
+
+								<ul aria-labelledby="mostla" class="dropdown-menu">
+									<li>
+					                 	<a  href="blockchain.html" class="dropdown-item">Blockchain</a>
+					                </li>
+					                <li>
+					                 	<a  href="ia.html" class="dropdown-item">Inteligencia Artificil</a>
+					                </li>
+					                <li>
+					                 	<a  href="#" class="dropdown-item">Realidad Virtual</a>
+					                </li>
+								</ul>
+							</li>
+
+							<!-- <li><a class="dropdown-item" href="redlab.html">REDLab</a></li> -->
+							<li class="dropdown-submenu">
+								<a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="redlab">REDLab</a>
+
+								<ul aria-labelledby="redlab" class="dropdown-menu">
+									<li>
+					                 	<a  href="#" class="dropdown-item">Eye-tracking</a>
+					                </li>
+					                <li>
+					                 	<a  href="#" class="dropdown-item">Cámaras para Fotografía 360°</a>
+					                </li>
+					                <li>
+					                 	<a  href="#" class="dropdown-item">Dispositivo biométrico (GSR)</a>
+					                </li>
+								</ul>
+							</li>
+
+							<!-- <li><a class="dropdown-item" href="">Ciberseguridad</a></li> -->
+							<li class="dropdown-submenu">
+								<a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="ciber">Ciberseguridad</a>
+
+								<ul aria-labelledby="ciber" class="dropdown-menu">
+									<li>
+					                 	<a  href="#" class="dropdown-item">Tips</a>
+					                </li>
+					                <li>
+					                 	<a  href="#" class="dropdown-item">Comunicados</a>
+					                </li>
+								</ul>
+							</li>
+
+							<!-- <li><a class="dropdown-item" href="lineamientos.html">Adobe</a></li> -->
+							<li class="dropdown-submenu">
+								<a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="adobe">Adobe</a>
+
+								<ul aria-labelledby="adobe" class="dropdown-menu">
+									<li>
+					                 	<a  href="#" class="dropdown-item">Photoshop</a>
+					                </li>
+					                <li>
+					                 	<a  href="#" class="dropdown-item">Ilustrador</a>
+					                </li>
+					                <li>
+					                 	<a  href="#" class="dropdown-item">Premier</a>
+					                </li>
+								</ul>
+							</li>
+
+							<!-- <li><a class="dropdown-item" href="">Microsoft</a></li> -->
+
+							<li class="dropdown-submenu">
+								<a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="msft">Microsoft</a>
+
+								<ul aria-labelledby="msft" class="dropdown-menu">
+									<li>
+					                 	<a  href="#" class="dropdown-item">Teams</a>
+					                </li>
+					                <li>
+					                 	<a  href="#" class="dropdown-item">Outlook</a>
+					                </li>
+					                <li>
+					                 	<a  href="#" class="dropdown-item">Excel</a>
+					                </li>
+					                <li>
+					                 	<a  href="#" class="dropdown-item">Word</a>
+					                </li>
+					                <li>
+					                 	<a  href="#" class="dropdown-item">Power Point</a>
+					                </li>
+					                <li>
+					                 	<a  href="#" class="dropdown-item">OneDrive</a>
+					                </li>
+					                <li>
+					                 	<a  href="#" class="dropdown-item">OneNote</a>
+					                </li>
+								</ul>
+							</li>
+						</ul>
 					</li>
 
 					<li class="nav-item align-self-center" style="padding: 0 20px;">
@@ -127,7 +206,7 @@
 				</ul>
 				
 		</nav>
-			</div>	
+	</div>		
 
 			<br><br>
 			<br>	
@@ -297,14 +376,14 @@
 	<footer class="blockquote-footer bg-dark">
 		<div class="row">
 		
-			<div class="col-sm-4" style="text-align: center;">				
+			<div class="col-sm-2" style="text-align: center;">				
 				<!-- <a href="https://tec.mx/es" target="_blank">
 				<img class="img-fluid" src="img/site-tec-white-logo.png" alt="Logo" style="max-width: 180px;">
 				<a>
 				<br><br> -->
  			</div>
  			
- 			<div class="col-sm-4" style="font-size: 12px; ">				
+ 			<div class="col-sm-8" style="font-size: 12px; ">				
 				<p class="text-white text-center">
 					Av. Eugenio Garza Sada 2501 Sur Col. Tecnológico. C.P.64849 Monterrey, Nuevo León.
 				</p>
@@ -315,7 +394,7 @@
 
  			</div>
 		
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<!-- <p class="text-white" style="text-align: center;">
 					Síguenos:<br>
 					<a href="https://twitter.com/tecdemonterrey" target="_blank" style="color: #ffffff;"><ion-icon name="logo-twitter" size="large"></ion-icon></a>
