--- a/index.html
+++ b/index.html
@@ -60,24 +60,6 @@
 		width: 85%;
 	}
 
-	.dropdown-submenu {
-	  position: relative;
-	}
-
-	.dropdown-submenu>a:after {
-	  /*content: "\f0da";*/
-	  /*float: right;*/
-	  border: none;
-	  /*font-family: 'FontAwesome';*/
-	}
-
-	.dropdown-submenu>.dropdown-menu {
-	  top: 0;
-	  left: 100%;
-	  margin-top: 0px;
-	  margin-left: 0px;
-	}
-
 	/*.container-fluid {
 		width: 100%;
 	}*/
@@ -124,10 +106,10 @@
 
 								<ul aria-labelledby="mostla" class="dropdown-menu">
 									<li>
-					                 	<a  href="#" class="dropdown-item">Blockchain</a>
+					                 	<a  href="blockchain.html" class="dropdown-item">Blockchain</a>
 					                </li>
 					                <li>
-					                 	<a  href="#" class="dropdown-item">Inteligencia Artificil</a>
+					                 	<a  href="ia.html" class="dropdown-item">Inteligencia Artificil</a>
 					                </li>
 					                <li>
 					                 	<a  href="#" class="dropdown-item">Realidad Virtual</a>
@@ -323,14 +305,14 @@
 	<footer class="blockquote-footer bg-dark">
 		<div class="row">
 		
-			<div class="col-sm-4" style="text-align: center;">				
+			<div class="col-sm-2" style="text-align: center;">				
 				<!-- <a href="https://tec.mx/es" target="_blank">
 				<img class="img-fluid" src="img/site-tec-white-logo.png" alt="Logo" style="max-width: 180px;">
 				<a>
 				<br><br> -->
  			</div>
  			
- 			<div class="col-sm-4" style="font-size: 12px; ">				
+ 			<div class="col-sm-8" style="font-size: 12px; ">				
 				<p class="text-white text-center">
 					Av. Eugenio Garza Sada 2501 Sur Col. Tecnológico. C.P.64849 Monterrey, Nuevo León.
 				</p>
@@ -341,7 +323,7 @@
 
  			</div>
 		
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<!-- <p class="text-white" style="text-align: center;">
 					Síguenos:<br>
 					<a href="https://twitter.com/tecdemonterrey" target="_blank" style="color: #ffffff;"><ion-icon name="logo-twitter" size="large"></ion-icon></a>
